<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.yangxj96.spectra</groupId>
        <artifactId>spectra-admin</artifactId>
        <version>${revision}</version>
    </parent>

    <artifactId>spectra-launch</artifactId>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <!-- 项目模块 Begin -->
        <!-- 核心 不可移除 Begin -->
        <dependency>
            <groupId>io.github.yangxj96.spectra</groupId>
            <artifactId>spectra-common</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.yangxj96.spectra</groupId>
            <artifactId>spectra-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!-- 核心 不可移除 End -->
        <!-- 工作流 -->
        <dependency>
            <groupId>io.github.yangxj96.spectra</groupId>
            <artifactId>spectra-workflow</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!-- 许可配置,私单用来防止客户白嫖 -->
        <dependency>
            <groupId>io.github.yangxj96.spectra</groupId>
            <artifactId>spectra-license</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!-- 项目模块 End -->

        <!-- XSS攻击防范 -->
        <dependency>
            <groupId>net.dreamlu</groupId>
            <artifactId>mica-xss</artifactId>
        </dependency>
        <dependency>
            <groupId>net.dreamlu</groupId>
            <artifactId>mica-core</artifactId>
        </dependency>

    </dependencies>


    <build>
        <plugins>
            <!-- 编译器插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <!-- 启动类 -->
                    <mainClass>io.github.yangxj96.spectra.launch.LaunchApplication</mainClass>
                    <!-- 排除lombok -->
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                    <!-- jvm参数 -->
                    <jvmArguments>
                        --add-modules ALL-SYSTEM --enable-native-access=ALL-UNNAMED
                    </jvmArguments>
                    <!-- 镜像配置 -->
                    <image>
                        <builder>paketobuildpacks/builder-jammy-tiny</builder>
                        <env>
                            <BP_NATIVE_IMAGE>false</BP_NATIVE_IMAGE>
                            <BP_IMAGE_FLATTEN>true</BP_IMAGE_FLATTEN>
                        </env>
                    </image>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>